@startuml
skinparam dpi 150
skinparam shadowing false

entity "DEPARTMENTS" as dept {
  * id : INTEGER <<PK>>
  --
  * name : TEXT <<NOT NULL, UNIQUE>>
  type : TEXT
}

entity "INCIDENTS" as inc {
  * id : INTEGER <<PK>>
  --
  * date : DATE <<NOT NULL>>
  * department_id : INTEGER <<FK → departments(id)>>
  incident_type : TEXT
  severity : TEXT
  days_lost : INTEGER <<DEFAULT 0>>
  description : TEXT
}

entity "EQUIPMENT_FAILURES" as fail {
  * id : INTEGER <<PK>>
  --
  * date : DATE <<NOT NULL>>
  * department_id : INTEGER <<FK → departments(id)>>
  equipment_type : TEXT
  equipment_name : TEXT
  operating_hours : REAL <<DEFAULT 0>>
  downtime_hours : REAL <<DEFAULT 0>>
  failure_cause : TEXT
  repair_cost : REAL
  description : TEXT
}

entity "SAFETY_VIOLATIONS" as viol {
  * id : INTEGER <<PK>>
  --
  * date : DATE <<NOT NULL>>
  * department_id : INTEGER <<FK → departments(id)>>
  violation_type : TEXT
  is_audit_finding : BOOLEAN <<DEFAULT FALSE>>
  responsible : TEXT
  description : TEXT
}

entity "MEDICAL_EXAMS" as med {
  * id : INTEGER <<PK>>
  --
  * date : DATE <<NOT NULL>>
  profession : TEXT
  * department_id : INTEGER <<FK → departments(id)>>
  findings : TEXT
  disease_category : TEXT
  notes : TEXT
}

entity "RISK_ASSESSMENTS" as risk {
  * id : INTEGER <<PK>>
  --
  * method : TEXT <<NOT NULL>>
  * name : TEXT <<NOT NULL>>
  input_params : TEXT
  result : TEXT
  source_type : TEXT
  source_id : INTEGER
  created_at : DATETIME <<DEFAULT CURRENT_TIMESTAMP>>
  author : TEXT
}

dept ||--o{ inc : "FK"
dept ||--o{ fail : "FK"
dept ||--o{ viol : "FK"
dept ||--o{ med : "FK"
@enduml
